--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,9 @@
+body {
+  font-family: 'Open Sans', sans-serif;
+  margin: 0 auto;
+  padding: 0;
+}
+
 .navbar {
   margin-bottom: 0;
   border-bottom: solid 5px #2358BD;
