--- a/css/app.css
+++ b/css/app.css
@@ -34,3 +34,28 @@ body {
   color: #2358BD;
 }
 
+.header {
+  background-image: url(../images/portada.jpg?ad70db08d161af5e69472b441c6578bf);
+  background-size: cover;
+  height: 600px;
+}
+
+.header h1 {
+  margin-top: 40vh;
+  text-align: left;
+  color: #E73F3F;
+  font-size: 50px;
+  margin-left: 10vh;
+  font-weight: 800;
+  line-height: 1.3;
+  margin-bottom: -1.5%;
+}
+
+.header p {
+  color: #666666;
+  margin-top: 5vh;
+  text-align: left;
+  margin-left: 10vh;
+  font-size: 16px;
+}
+
