--- a/css/app.css
+++ b/css/app.css
@@ -59,3 +59,84 @@ body {
   font-size: 16px;
 }
 
+.call {
+  background-color: #E73F3F;
+  -webkit-box-shadow: 0px 3px 5px #00000036;
+          box-shadow: 0px 3px 5px #00000036;
+}
+
+.call__left-1 {
+  color: #FFFFFF;
+  text-align: left;
+  font-size: 30px;
+  Font-weight: 700;
+  line-height: 1;
+}
+
+.call__left-2 {
+  color: #FFFFFF;
+  text-align: left;
+  font-size: 25px;
+}
+
+.call__right {
+  color: #FFFFFF;
+  text-align: right;
+  font-size: 55px;
+  font-weight: 800;
+}
+
+.col-2 {
+  float: left;
+  margin-left: 5%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.col-6 {
+  float: left;
+  margin-left: 2%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding-top: 3.5%;
+  line-height: .5;
+}
+
+.col-4 {
+  float: left;
+  margin-left: 15%;
+  margin-right: 5%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding-top: 3%;
+}
+
+.row {
+  padding-top: .3%;
+  padding-bottom: .3%;
+}
+
+.img-responsive {
+  width: 150px;
+}
+
+.fundacion {
+  margin-bottom: 20vh;
+}
+
+.fundacion h2 {
+  margin-top: 20vh;
+  margin-bottom: 5vh;
+  text-align: center;
+  color: #0060A2;
+  font-size: 35px;
+  font-weight: 700;
+}
+
+.fundacion p {
+  text-align: center;
+  margin-left: 20vh;
+  margin-right: 20vh;
+  color: #666666;
+}
+
