--- a/css/app.css
+++ b/css/app.css
@@ -140,3 +140,15 @@ body {
   color: #666666;
 }
 
+.row {
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.content h2 {
+  text-align: center;
+  color: #666666;
+  font-weight: 700;
+  margin-bottom: 10vh;
+}
+
