--- a/css/app.css
+++ b/css/app.css
@@ -152,3 +152,38 @@ body {
   margin-bottom: 10vh;
 }
 
+.content .img-responsive {
+  max-width: 100%;
+}
+
+.thumbnail {
+  border: none;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+}
+
+.btn {
+  background-color: #4582DD;
+  border-radius: 0;
+  border: none;
+  padding-left: 40%;
+  padding-right: 40%;
+  background-image: none;
+  background-image: none;
+  background-image: none;
+}
+
+.thumbnail_p {
+  margin-top: 10%;
+  text-align: center;
+}
+
+.thumbnail h3 {
+  color: #333333;
+}
+
+.footer h2 {
+  text-align: center;
+  color: #FFFFFF;
+}
+
