--- a/css/app.css
+++ b/css/app.css
@@ -185,5 +185,15 @@ body {
 .footer h2 {
   text-align: center;
   color: #FFFFFF;
+  background-color: #6D9DD1;
+  font-weight: 700;
+  padding: 2%;
+  -webkit-box-shadow: 0px 3px 5px #00000036;
+          box-shadow: 0px 3px 5px #00000036;
+}
+
+.footer {
+  background-color: #333333;
+  color: #FFFFFF;
 }
 
