--- a/css/app.css
+++ b/css/app.css
@@ -152,7 +152,7 @@ body {
 }
 
 .content .img-responsive {
-  max-width: 100%;
+  width: 400px;
 }
 
 .thumbnail {
@@ -161,7 +161,7 @@ body {
   -webkit-box-shadow: none;
 }
 
-.btn {
+.btn_content {
   background-color: #4582DD;
   border-radius: 0;
   border: none;
@@ -184,15 +184,38 @@ body {
 .footer h2 {
   text-align: center;
   color: #FFFFFF;
-  background-color: #6D9DD1;
   font-weight: 700;
-  padding: 2%;
-  -webkit-box-shadow: 0px 3px 5px #00000036;
-          box-shadow: 0px 3px 5px #00000036;
 }
 
 .footer {
   background-color: #333333;
   color: #FFFFFF;
+}
+
+.footer__titulo {
+  background-color: #6D9DD1;
+  -webkit-box-shadow: 0px 3px 5px #00000036;
+          box-shadow: 0px 3px 5px #00000036;
+  padding: 1.5%;
+}
+
+.footer__titulo p {
+  text-align: center;
+}
+
+.btn_footer {
+  margin-top: 1%;
+  border: 0;
+  border-radius: 0;
+  background-color: #E73F3F;
+  padding: .8%;
+  width: 50%;
+  font-weight: 700;
+  font-size: 1.2em;
+  background-image: none;
+  background-image: none;
+  background-image: none;
+  box-shadow: none;
+  -webkit-box-shadow: none;
 }
 
