--- a/css/app.css
+++ b/css/app.css
@@ -124,7 +124,7 @@ body {
 }
 
 .fundacion h2 {
-  margin-top: 20vh;
+  margin-top: 25vh;
   margin-bottom: 5vh;
   text-align: center;
   color: #0060A2;
@@ -134,8 +134,6 @@ body {
 
 .fundacion p {
   text-align: center;
-  margin-left: 20vh;
-  margin-right: 20vh;
   color: #666666;
 }
 
@@ -148,7 +146,12 @@ body {
   text-align: center;
   color: #666666;
   font-weight: 700;
-  margin-bottom: 10vh;
+  margin-bottom: 2vh;
+}
+
+.content p {
+  text-align: center;
+  margin-bottom: 8vh;
 }
 
 .content .img-responsive {
@@ -219,7 +222,7 @@ body {
   -webkit-box-shadow: none;
 }
 
-.row h2 {
+.footer .row h2 {
   text-align: left;
   padding-bottom: 5%;
 }
@@ -230,7 +233,7 @@ iframe {
   margin-bottom: 5%;
 }
 
-.row .col-4 {
+.footer .col-4 {
   margin-right: 5%;
 }
 
@@ -240,10 +243,9 @@ iframe {
   font-size: 1.1em;
 }
 
-.row p {
+.footer p {
   font-weight: 300;
-  font-size: 1.2rem;
-  padding-bottom: 3%;
+  font-size: 1em;
 }
 
 .networks i {
