--- a/css/app.css
+++ b/css/app.css
@@ -21,14 +21,11 @@ body {
 }
 
 .logo {
-  max-width: 100px;
-  margin-left: 20vh;
-  margin-top: 2vh;
+  max-width: 100%;
 }
 
 .navbar-right {
   margin-top: 5vh;
-  margin-right: 20vh;
 }
 
 .navbar-default .navbar-nav > li > a {
@@ -38,14 +35,13 @@ body {
 .header {
   background-image: url(../images/portada_3.jpg?41d5b6df9503a9d886dafde17f3235d5);
   background-size: cover;
+  margin-top: 5%;
 }
 
 .header h1 {
-  margin-top: 55vh;
+  margin-top: 20%;
   text-align: left;
   color: #E73F3F;
-  font-size: 50px;
-  margin-left: 20vh;
   font-weight: 800;
   line-height: 1.3;
   margin-bottom: -1.5%;
@@ -56,7 +52,6 @@ body {
   margin-top: 5vh;
   margin-bottom: 12vh;
   text-align: left;
-  margin-left: 20vh;
   font-size: 16px;
 }
 
@@ -115,7 +110,7 @@ body {
   padding-bottom: .3%;
 }
 
-.img-responsive {
+.call .img-responsive {
   width: 150px;
 }
 
@@ -340,5 +335,16 @@ iframe {
 
 .header_nosotros p {
   color: #666666;
+}
+
+.imagenes {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-top: 3%;
+  padding-bottom: 10%;
 }
 
