--- a/css/app.css
+++ b/css/app.css
@@ -20,8 +20,9 @@ body {
   height: 80px;
 }
 
-.logo {
+.img-fluid {
   max-width: 100%;
+  height: auto;
 }
 
 .navbar-right {
@@ -30,6 +31,11 @@ body {
 
 .navbar-default .navbar-nav > li > a {
   color: #2358BD;
+}
+
+.navbar-default .navbar-toggle {
+  margin-top: 10%;
+  border-color: #0060A2;
 }
 
 .header {
@@ -55,6 +61,12 @@ body {
   font-size: 16px;
 }
 
+@media screen and (max-width: 320px) {
+  .header h1 {
+    margin-top: 40%;
+  }
+}
+
 .call {
   background-color: #E73F3F;
   -webkit-box-shadow: 0px 3px 5px #00000036;
@@ -62,47 +74,26 @@ body {
 }
 
 .call__left-1 {
+  padding-top: 10%;
   color: #FFFFFF;
   text-align: left;
-  font-size: 30px;
+  font-size: 3em;
   Font-weight: 700;
-  line-height: 1;
+  line-height: .5;
 }
 
 .call__left-2 {
   color: #FFFFFF;
   text-align: left;
-  font-size: 25px;
+  font-size: 2rem;
 }
 
 .call__right {
+  padding-top: 12%;
   color: #FFFFFF;
   text-align: right;
-  font-size: 55px;
+  font-size: 3em;
   font-weight: 800;
-}
-
-.col-2 {
-  float: left;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-.col-6 {
-  float: left;
-  margin-left: 2%;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding-top: 3.5%;
-  line-height: .5;
-}
-
-.col-4 {
-  float: left;
-  margin-left: 12%;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding-top: 3%;
 }
 
 .row {
@@ -111,7 +102,33 @@ body {
 }
 
 .call .img-responsive {
-  width: 150px;
+  width: 100%;
+}
+
+@media screen and (max-width: 320px) {
+  .call__right {
+    font-size: 2.5em;
+    text-align: center;
+    padding-top: 0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .call .img-responsive {
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .call__left-1 {
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .call__left-2 {
+    text-align: center;
+  }
 }
 
 .fundacion {
@@ -180,6 +197,7 @@ body {
 }
 
 .footer h2 {
+  padding-top: 5%;
   text-align: center;
   color: #FFFFFF;
   font-weight: 700;
@@ -223,13 +241,7 @@ body {
 }
 
 iframe {
-  height: 300px;
-  margin-top: 8%;
   margin-bottom: 5%;
-}
-
-.footer .col-4 {
-  margin-right: 5%;
 }
 
 .row h4 {
@@ -311,6 +323,20 @@ iframe {
 .date i {
   margin-right: 1.5%;
   font-size: 1.2em;
+}
+
+@media screen and (max-width: 320px) {
+  .articulo .col-8 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .articulo .col-8 {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 .header_nosotros {
