--- a/css/app.css
+++ b/css/app.css
@@ -102,7 +102,7 @@ body {
 }
 
 .call .img-responsive {
-  width: 100%;
+  max-width: 100%;
 }
 
 @media screen and (max-width: 320px) {
@@ -128,6 +128,12 @@ body {
 @media screen and (max-width: 320px) {
   .call__left-2 {
     text-align: center;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .call .img-responsive {
+    max-width: 100%;
   }
 }
 
