--- a/css/app.css
+++ b/css/app.css
@@ -290,6 +290,13 @@ iframe {
   color: #FFFFFF;
 }
 
+@media screen and (max-width: 768px) {
+  iframe {
+    width: 400px;
+    height: 250px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   iframe {
     width: 250px;
