--- a/src/scss/_article.scss
+++ b/src/scss/_article.scss
@@ -35,3 +35,13 @@
 	font-size: 1.2em;
 }
 
+.articulo .img-fluid {
+	padding-bottom: 5%;
+}
+
+.separador {
+	border: solid 1px #ededed;
+	margin-top: 5%;
+	margin-bottom: 5%;
+}
+
