--- a/public/css/app.css
+++ b/public/css/app.css
@@ -376,6 +376,16 @@ iframe {
   font-size: 1.2em;
 }
 
+.articulo .img-fluid {
+  padding-bottom: 5%;
+}
+
+.separador {
+  border: solid 1px #ededed;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
 /*Nosotros*/
 
 .header_nosotros {
