--- a/public/css/app.css
+++ b/public/css/app.css
@@ -421,7 +421,18 @@ iframe {
       -ms-flex-pack: center;
           justify-content: center;
   padding-top: 3%;
-  padding-bottom: 10%;
+  padding-bottom: 2%;
+}
+
+.organizacion h3 {
+  color: #0060A2;
+  padding-bottom: 3%;
+  font-weight: 700;
+}
+
+.down {
+  padding-top: 3%;
+  padding-bottom: 5%;
 }
 
 @media screen and (max-width: 768px) {
