--- a/src/scss/_us.scss
+++ b/src/scss/_us.scss
@@ -27,7 +27,18 @@
 	display: flex;
 	justify-content: center;
 	padding-top: 3%;
-	padding-bottom: 10%;
+	padding-bottom: 2%;
+}
+
+.organizacion h3 {
+	color: #0060A2;
+	padding-bottom: 3%;
+	font-weight: 700;
+}
+
+.down {
+	padding-top: 3%;
+	padding-bottom: 5%;
 }
 
 
