Ultima informacion editada

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -430,6 +430,10 @@ iframe {
   font-weight: 700;
 }
 
+.organizacion h4 {
+  color: #808080;
+}
+
 .down {
   padding-top: 3%;
   padding-bottom: 5%;
